@@ -62,6 +62,10 @@ func TestLoadConfig(t *testing.T) {
 			utils.RedisClusterSyncCfg:        "5s",
 			utils.RedisClusterOnDownDelayCfg: "0",
 			utils.RedisClusterCfg:            false,
+			utils.RedisTLS:                   false,
+			utils.RedisClientCertificate:     "",
+			utils.RedisClientKey:             "",
+			utils.RedisCACertificate:         "",
 		},
 		RmtConns: []string{},
 		RplConns: []string{},
