@@ -80,7 +80,7 @@ func TestFilterIndexerIT(t *testing.T) {
 		redisDB, err := NewRedisStorage(
 			fmt.Sprintf("%s:%s", cfg.DataDbCfg().DataDbHost, cfg.DataDbCfg().DataDbPort),
 			4, cfg.DataDbCfg().DataDbUser, cfg.DataDbCfg().DataDbPass, cfg.GeneralCfg().DBDataEncoding,
-			utils.REDIS_MAX_CONNS, "", false, 0, 0)
+			utils.REDIS_MAX_CONNS, "", false, 0, 0, false, utils.EmptyString, utils.EmptyString, utils.EmptyString)
 		if err != nil {
 			t.Fatal("Could not connect to Redis", err.Error())
 		}
